[PSPIEL-182] added appointment qr code generation endpoint
[PSPIEL-182] Updated docs with qr code generation endpoint details
