# swagger.yaml
@@ -1140,7 +1140,7 @@ paths:
                             type: string
                   
         '400':
-          description: JSON payload validation error
+          description: JSON payload validation error | Invalid appointment id
           content:
             application/json:
               schema:
@@ -1181,7 +1181,7 @@ paths:
                     description: message from the server
                   
         '400':
-          description: JSON payload validation error
+          description: Invalid appointment id
           content:
             application/json:
               schema:
@@ -1196,3 +1196,55 @@ paths:
 
         '500':
           $ref: '#/components/responses/UnknownServerError'
+
+  # appointmemt qr generation
+  /appointment/qr/{appointmentId}:
+    post:
+      tags:
+        - Appointment
+      summary: Allows fetching of appointment qr token
+      security:
+        - basicAuth: []
+      parameters:
+        - in: header
+          name: Authorization
+          description: pass the access token
+          required: true
+      
+      responses:
+        '200':
+          description: Generated QR code details
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: message from the server
+                  data:
+                    type: object
+                    properties:
+                      qrCode:
+                        type: object
+                        properties:
+                          token:
+                            type: string
+                            
+        '400':
+          description: Invalid appintment id
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error: 
+                    type: string
+                    description: A error message from server
+
+        '401':
+          $ref: '#/components/responses/Unauhtorized'
+
+        '500':
+          $ref: '#/components/responses/UnknownServerError' 
+  
